--- a/GB-ToDoList/main.css
+++ b/GB-ToDoList/main.css
@@ -1,16 +1,84 @@
-.box {
+body {
+  --content_border: solid 1px #ffffff;
+  --main_bg: linear-gradient(
+    90deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(9, 9, 121, 1) 10%,
+    rgba(0, 212, 255, 1) 100%
+  );
+  --content_bg: #ffffff;
+  --button_bg: rgba(7, 52, 149);
+  margin: 0;
+  padding: 10px 0;
+  font-family: Poppins;
+  font-weight: 500;
+  background-image: var(--main_bg);
   display: flex;
-  background-color: #eee;
-  border: 1px solid #000;
-  border-radius: 20px;
-  margin: 20px auto;
-  width: 50%;
-  align-self: center;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  flex-direction: column;
+  height: 100vh;
 }
-.list {
-  border: 1px solid #000;
-  border-radius: 20px;
+.content {
+  border: var(--content_border);
+  padding: clamp(10px, 35px, 50px);
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 50px;
+  height: clamp(30vh, 50vh, 90vh);
+  min-height: fit-content;
+}
+.content > * {
+  background-color: var(--content_bg);
+  border-radius: 5px;
+  box-shadow: 2px 2px 4px #00000044;
+}
+.createtask {
+  width: 100%;
+  height: 30%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: 5px 10px;
+}
+.taskname {
+  padding: 10px;
+}
+.tasks {
+  height: max-content;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  width: 100%;
+  padding: 5px 10px;
+  gap: 20px;
+}
+.task {
+  height: 50px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px 10px;
+}
+.actionbutton {
+  background-color: var(--button_bg);
+  padding: 15px;
+  color: #ffffff;
+  border: 0;
+  border-radius: 5px;
+  transition: 0.25s;
+}
+.actionbutton:hover {
+  transition: 0.25s;
+  background: #fff;
+  color: #000;
+  border-radius: 7px;
+  border: solid 1px #000;
 }
